# design_patterns_python

./: .gitignore  README.md  pyproject.toml
creational_patterns/builder/: README.md  builder_pattern.ipynb  builder_pattern.py
creational_patterns/factory/: README.md
